examples/test/testpolicy362.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy362
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key16: value44
      key28: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value18
          key43: value35
          key46: value23
      podSelector:
        matchLabels:
          key6: value15
